syntax = "proto3";
package m2g.pb;

enum ConstantType {
  NO_CONSTANT = 0;

  ATTRIBUTE_LINEAR_SPEED = 1;
  ATTRIBUTE_ANGULAR_ACCURACY = 2;
  ATTRIBUTE_AVERAGE_DAMAGE = 3;
  ATTRIBUTE_DAMAGE_ACCURACY = 4;
  ATTRIBUTE_DAMAGE_RADIUS = 5;
  ATTRIBUTE_AVERAGE_TTL = 6;
  ATTRIBUTE_TTL_ACCURACY = 7;
  CONSTANT_AMMO_GAIN = 8; // Int
  CONSTANT_RANGED_ENERGY_REQUIREMENT = 9;
  CONSTANT_MELEE_ENERGY_REQUIREMENT = 10;
}
