syntax = "proto3";
package m2.pb;

import "SpriteType.proto";
import "ResourceType.proto";
import "ItemType.proto";

message Resource {
  m2g.pb.ResourceType type = 1;
  oneof value {
    double amount = 2;
    bool p_inf = 3;
    bool n_inf = 4;
  }
}

enum Usage {
  CONSUMABLE = 0;
  REUSABLE = 1;
  AUTOMATIC = 2; // Benefits are applied automatically every second
  PASSIVE = 3;
}

/// An item also represents a capability
message Item {
  m2g.pb.ItemType type = 1;
  Usage usage = 2;
  bool use_on_acquire = 3;
  repeated Resource costs = 4;
  repeated Resource benefits = 5;
  m2g.pb.SpriteType game_sprite = 6;
  m2g.pb.SpriteType ui_sprite = 7;
}

message Items {
  repeated Item items = 1;
}